docs:移除 UV管理Python项目以及Docker打包的最佳实践文章
- 删除了 src/content/posts/对于UV管理Python项目以及Docker打包的最佳实践探讨.md 文件
- 在 package.json 中添加了新的脚本命令 "copy-posts"

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "astro": "astro",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "comments": "curl -L https://unpkg.com/@waline/client@latest/dist/waline.css -o public/assets/waline/waline.css && curl -L https://unpkg.com/@waline/client@latest/dist/waline.js -o public/assets/waline/waline.js"
+    "comments": "curl -L https://unpkg.com/@waline/client@latest/dist/waline.css -o public/assets/waline/waline.css && curl -L https://unpkg.com/@waline/client@latest/dist/waline.js -o public/assets/waline/waline.js",
+    "copy-posts": "node scripts/copy-posts.js"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
