--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "generate-lqip": "esno scripts/generate-lqip.ts",
     "apply-lqip": "esno scripts/apply-lqip.ts",
     "update-theme": "esno scripts/update-theme.ts",
-    "update-vendors": "curl -L https://unpkg.com/@waline/client@latest/dist/waline.css -o public/vendors/waline/waline.css && curl -L https://unpkg.com/@waline/client@latest/dist/waline.js -o public/vendors/waline/waline.js"
+    "update-vendors": "curl -L https://unpkg.com/@waline/client@latest/dist/waline.css -o public/vendors/waline/waline.css && curl -L https://unpkg.com/@waline/client@latest/dist/waline.js -o public/vendors/waline/waline.js",
+    "copy-posts": "node scripts/copy-posts.js"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
