--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "new-post": "esno scripts/new-post.ts",
     "format-posts": "esno scripts/format-posts.ts",
     "update-theme": "esno scripts/update-theme.ts",
-    "update-vendors": "curl -L https://unpkg.com/@waline/client@latest/dist/waline.css -o public/vendors/waline/waline.css && curl -L https://unpkg.com/@waline/client@latest/dist/waline.js -o public/vendors/waline/waline.js"
+    "update-vendors": "curl -L https://unpkg.com/@waline/client@latest/dist/waline.css -o public/vendors/waline/waline.css && curl -L https://unpkg.com/@waline/client@latest/dist/waline.js -o public/vendors/waline/waline.js",
+    "comments": "curl -L https://unpkg.com/@waline/client@latest/dist/waline.css -o public/assets/waline/waline.css && curl -L https://unpkg.com/@waline/client@latest/dist/waline.js -o public/assets/waline/waline.js",
+    "copy-posts": "node scripts/copy-posts.js"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
@@ -48,20 +50,17 @@
     "@astrojs/check": "^0.9.4",
     "@types/hast": "^3.0.4",
     "@types/markdown-it": "^14.1.2",
-    "@types/node": "^22.15.29",
+    "@types/node": "^22.15.21",
     "@types/sanitize-html": "^2.16.0",
-    "@unocss/eslint-plugin": "66.1.3",
-    "@unocss/preset-attributify": "66.1.3",
-    "@unocss/reset": "66.1.3",
+    "@unocss/eslint-plugin": "66.1.2",
+    "@unocss/preset-attributify": "66.1.2",
+    "@unocss/reset": "66.1.2",
     "astro-eslint-parser": "^1.2.2",
-    "autocorrect-node": "^2.14.0",
-    "eslint": "^9.28.0",
+    "eslint": "^9.27.0",
     "eslint-plugin-astro": "^1.3.1",
-    "esno": "^4.8.0",
-    "fast-glob": "^3.3.3",
-    "lint-staged": "^16.1.0",
+    "lint-staged": "^16.0.0",
     "typescript": "~5.8.3",
-    "unocss": "66.1.3",
+    "unocss": "66.1.2",
     "unocss-preset-theme": "^0.14.1"
   },
   "lint-staged": {
