--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apply-lqip": "esno scripts/apply-lqip.ts",
     "update-theme": "esno scripts/update-theme.ts",
     "update-vendors": "curl -L https://unpkg.com/@waline/client@latest/dist/waline.css -o public/vendors/waline/waline.css && curl -L https://unpkg.com/@waline/client@latest/dist/waline.js -o public/vendors/waline/waline.js",
+    "comments": "curl -L https://unpkg.com/@waline/client@latest/dist/waline.css -o public/assets/waline/waline.css && curl -L https://unpkg.com/@waline/client@latest/dist/waline.js -o public/assets/waline/waline.js",
     "copy-posts": "node scripts/copy-posts.js"
   },
   "dependencies": {
